# django-telegram-q2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lint_and_test.yaml
src/django_telegram_q2/common/: fields.py
src/django_telegram_q2/common/tests/: test_fields.py
src/django_telegram_q2/telegram/: admin.py  apps.py  intake.py  models.py  signals.py  tasks.py  updates.py  urls.py  views.py  worker.py
src/django_telegram_q2/telegram/migrations/: 0001_initial.py  0002_job_stale_delivery_index.py  0003_telegram_update_receipt.py
src/django_telegram_q2/telegram/tests/: test_admin.py  test_client.py  test_delivery.py  test_intake.py  test_logging.py  test_schedules.py  test_signals.py  test_tasks_branches.py  test_updates.py  test_views.py  test_worker.py
tests/: dummy_processing.py  settings.py  urls.py
