[build-system]
requires = [ "uv_build >= 0.11.0, <0.12.0" ]
build-backend = "uv_build"

[project]
name = "django-telegram-q2"
version = "1.0.0"
description = "Django reusable app — Telegram Bot pipeline backed by django-q2"
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
  "django>=5.2.16,<6.0",
  "django-q2>=1.0.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "cryptography>=44.0.0,<49.0.0"
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
keywords = [ "django", "telegram", "bot", "django-q2", "pipeline" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "Topic :: Communications :: Chat"
]

  [[project.authors]]
  name = "Dmitrii Safronov"
  email = "dhameoelin+django-telegram-q2@gmail.com"

  [project.urls]
  Source = "https://github.com/disafronov/django-telegram-q2"
  Issues = "https://github.com/disafronov/django-telegram-q2/issues"

[dependency-groups]
dev = [
  "black>=26.5.1",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "flake8-pyproject>=1.2.3",
  "pytest>=9.1.0",
  "pytest-django>=4.8.0",
  "pytest-cov>=4.1.0",
  "mypy",
  "django-stubs[compatible-mypy]>=5.2,<5.3",
  "bandit>=1.7.5",
  "pre-commit>=4.6.0",
  "vulture>=2.16",
  "pip-audit>=2.10.1",
  "psycopg2-binary>=2.9.12,<3.0.0"
]

[tool.black]
line-length = 88
include = "\\.pyi?$"

[tool.isort]
profile = "black"
src_paths = [ "src" ]
extend_skip_glob = "*/migrations/*.py"

[tool.flake8]
max-line-length = 88
extend-ignore = [ "E203", "W503" ]
exclude = [ ".venv", "htmlcov", "*/migrations/*.py" ]

[tool.mypy]
files = [ "src" ]
exclude = "(^tests/|^tests\\.py$|.*/tests/|^manage\\.py$)"
plugins = [ "mypy_django_plugin.main" ]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

  [[tool.mypy.overrides]]
  module = [ "django_q", "django_q.*" ]
  ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "tests.settings"

[tool.bandit]
exclude_dirs = [ ".venv", "htmlcov", "tests", "*/migrations/*" ]

[tool.coverage.run]
source = [ "src" ]
omit = [ ".venv/*", "tests/*", "*/tests/*", "*/migrations/*" ]
branch = true

[tool.coverage.report]
fail_under = 100
exclude_lines = [
  "raise AssertionError",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
  "@overload",
  "\\.\\.\\.$",
  "pragma: no cover"
]
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.vulture]
min_confidence = 80
paths = [ "src" ]
exclude = [ ".venv", "htmlcov", "*/migrations/*", "*/tests/*" ]
ignore_names = [ "cls" ]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = [ "test_*.py" ]
pythonpath = [ "." ]
addopts = "--strict-markers --cov --cov-report=term-missing"
testpaths = [ "tests", "src/django_telegram_q2" ]
filterwarnings = [ "ignore::DeprecationWarning" ]
